<?xml version="1.0"?>
<package format="2">
  <name>orne_box</name>
  <version>0.1.0</version>
  <description>The orne-box package(meta package)</description>
  <maintainer email="taishi@todo.todo">taishi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>orne_box_description</exec_depend>
  <exec_depend>orne_box_bringup</exec_depend>
  <exec_depend>orne_box_simulations</exec_depend>
  <export><metapackage/></export>
</package>
