<?xml version="1.0"?>
<package format="3">
  <name>orne_box</name>
  <version>0.1.0</version>
  <description>The orne-box package (meta package)</description>
  <maintainer email="hoge@todo.todo">open-rdc</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>orne_box_description</depend>
  <depend>orne_box_bringup</depend>
  <depend>orne_box_setup</depend>
  <!-- <depend>orne_box_navigation_executor</depend> -->
  <depend>orne_box_simulation</depend>
  <export></export>
</package>
