<?xml version="1.0"?>
<package format="2">
  <name>orne_box</name>
  <version>0.0.0</version>
  <description>The orne-box package(meta package)</description>
  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">yasuohayashibara</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>orne_box_description</exec_depend>
  <exec_depend>orne_box_bringup</exec_depend>
  <exec_depend>orne_box_simulations</exec_depend>
  <exec_depend>orne_box_navigation_executor</exec_depend>
  <exec_depend>orne_box_recovery_behavior</exec_depend>
  <exec_depend>orne_box_strategy</exec_depend>

  <export><metapackage/></export>
</package>
