<?xml version="1.0"?>
<package format="2">
  <name>orne_box_bringup</name>
  <version>0.1.0</version>
  <description>The orne_box_bringup package</description>
  <maintainer email="taishi@todo.todo">taishi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
