<?xml version="1.0"?>
<package format="2">
  <name>orne_box_bringup</name>
  <version>0.1.0</version>
  <description>The orne_box_bringup package</description>
  <maintainer email="taishi@todo.todo">taishi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>robot_pose_ekf</exec_depend>
  <exec_depend>urg_node</exec_depend>
</package>
