<?xml version="1.0"?>
<package format="2">
  <name>orne_box_bringup</name>
  <version>0.0.0</version>
  <description>The orne_box_bringup package</description>
  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">yasuohayashibara</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>icart_mini_driver</build_depend>
  <build_depend>icart_mini_gazebo</build_depend>
  <exec_depend>icart_mini_driver</exec_depend>
  <exec_depend>icart_mini_gazebo</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
</package>
