<?xml version="1.0"?>
<package format="2">
  <name>orne_box_navigation_executor</name>
  <version>0.1.0</version>
  <description>The orne_box_navigation_executor package</description>
  <maintainer email="xxx@todo.todo">xxx</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>map_server</build_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <export>
  </export>
</package>
