<?xml version="1.0"?>
<package format="2">
  <name>orne_box_setup</name>
  <version>0.1.0</version>
  <description>The orne_box_setup package</description>
  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">yasuo.hayashibara</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
