<?xml version="1.0"?>
<package>
  <name>orne_box_setup</name>
  <version>0.0.1</version>
  <description>The orne_box_setup package</description>
  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">yasuohayashibara</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
