<?xml version="1.0"?>
<package format="2">
  <name>orne_box_simulations</name>
  <version>1.2.0</version>
  <description>
    Gazebo simulation package for the orne_box
  </description>
  <license>BSD</license>
  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">yasuo.hayashibara</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>orne_box_description</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>

